# angort

./: CLOSURES  CMakeLists.txt  EXCEPTIONS  ISSUES  ITERATORS  LICENSE  NEWCLOSURES  README  README.md  SERIALISATION  THREADS.md  TYPES  config.h.in  hkangort.emf  makePlugin.pl  makeWords.pl  quicksort.ang
anglibs/: OPTSNOTES  ansiterm.ang  opts.ang  parse.ang  sdlutils.ang  stats.ang  svg.ang  tex.ang  util.ang  utils.ang  xmlgen.ang
cli/: CMakeLists.txt  basicdeb.cpp  cliWords.cpp  completer.cpp  completer.h  debtoks  debugger.cpp  main.cpp  stdEnv.cpp  stdMath.cpp
cmake/Modules/: FindLibedit.cmake  FindReadline.cmake
exampleplugin/: build  plugin.cpp
include/: angort.h  arraylist.h  cvset.h  exception.h  exceptsymbs.h  gc.h  genexcepts  hash.h  intkeyedhash.h  iterator.h  lock.h  map.h  namespace.h  params.h  plugins.h  ser.h  stack.h  stringbuf.h  tokeniser.h  types.h  value.h  wrappers.h
include/types/: closure.h  code.h  double.h  float.h  hashtype.h  integer.h  iter.h  list.h  long.h  native.h  none.h  nsid.h  plugobj.h  range.h  string.h  symbol.h
io/: README  io.cpp  test.ang
lib/: CMakeLists.txt  angort.cpp  angort.pc.cmakein  binop.cpp  cvset.cpp  cycle.cpp  cycle.h  deprecated.cpp  file.h  filefind.cpp  format.cpp  future.cpp  gentoks  intkeyedhash.h  libColl.cpp  libEnv.cpp  libMath.cpp  libStd.cpp  libString.cpp  libThread.cpp  namespace.cpp  opcodes.h  plugins.cpp  ser.cpp  stdColl.cpp  stdEnv.cpp  stdLists.cpp  stdMath.cpp  stdString.cpp  stdWords.cpp  stringbuf.cpp  tablify.ang  tokeniser.cpp  tokens  tokens.cpp  tokens.h  types.cpp  value.cpp
lib/types/: closure.cpp  code.cpp  double.cpp  float.cpp  hashtype.cpp  int.cpp  iter.cpp  list.cpp  long.cpp  native.cpp  nsid.cpp  plugobj.cpp  range.cpp  string.cpp  symbol.cpp
manual/: basics.tex  body.tex  build  flow.tex  hello.cpp  intro.tex  main.tex  missing.tex  optdebug.tex  paradigms.tex  plugins.tex
mpc/: .gdb_history  README  build  buildid3  id3.cpp  mpc.ang  mpc.cpp
mpc2/: .gdb_history  build  mpc.ang  mpc.cpp  test.ang
plugins/: README  buildall  clean  makePlugin.pl
plugins/io/: README  build  io.cpp  test.ang
plugins/midi/: build  makenotes.ang  midi.cpp  music.ang  player.ang  queue.ang  runtest  scales.ang  test.ang  test.xmz
plugins/mpc/: README  build  buildid3  buildmpc  debugging  id3.cpp  mpc  mpc.ang  mpc.cpp
plugins/sdl/: README  build  font.h  sdl.cpp  test.ang  texture.h
plugins/serial/: build  serial.cpp
plugins/sys/: build  sys.cpp
plugins/time/: build  test.ang  time.cpp
snippets/: loc
testfiles/: basic.ang  closure.ang  cond.ang  constexpr.ang  cycle.ang  eval.ang  exception.ang  format.ang  generator.ang  hash.ang  incdec.ang  list.ang  loop.ang  range.ang  recurse.ang  saveload.ang  strings.ang  testpackage.ang
tests/: CMakeLists.txt  assertions.h  hash.cpp  main.cpp  null.cpp  test.h  wordsTest.cpp
threadtests/: test1.ang  test2.ang  test2unth.ang  test3.ang  test4.ang  test5.ang  test6.ang
